tests/ui/parser/doc-before-struct-rbrace-1.stderr
error[E0585]: found a documentation comment that doesn't document anything
  --> $DIR/doc-before-struct-rbrace-1.rs:3:5
   |
LL | struct X {
   |        - while parsing this struct
LL |     a: u8,
LL |     /// document
   |     ^^^^^^^^^^^^
   |
   = help: doc comments must come before what they document, if a comment was intended use `//`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0585`.
